我就不信还404

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img src="textures/flag.png"></a>
         <img src="textures/cursor.png"></a>
         <img src="textures/mine.png"></a>
-        <img src="textures/mineWrong.png"></a>
+        <img src="textures/wrong.png"></a>
 
     </div>
     <div class="main">
